1、代码重构： models层：数据库相关操作 service层：业务逻辑处理 controller层：解析参数，返回数据 2、添加redis作为缓存，采用先写数据库再删缓存模式
