# docs/swagger.yaml
@@ -1,20 +1,9 @@
 basePath: /douyin
 definitions:
-  controllers.Comment:
-    properties:
-      content:
-        type: string
-      create_date:
-        type: string
-      id:
-        type: integer
-      user:
-        $ref: '#/definitions/controllers.User'
-    type: object
   controllers.CommentActionResponse:
     properties:
       comment:
-        $ref: '#/definitions/controllers.Comment'
+        $ref: '#/definitions/vo.Comment'
       status_code:
         type: integer
       status_msg:
@@ -24,7 +13,7 @@ definitions:
     properties:
       comment_list:
         items:
-          $ref: '#/definitions/controllers.Comment'
+          $ref: '#/definitions/vo.Comment'
         type: array
       status_code:
         type: integer
@@ -39,7 +28,7 @@ definitions:
         type: string
       video_list:
         items:
-          $ref: '#/definitions/controllers.Video'
+          $ref: '#/definitions/vo.Video'
         type: array
     type: object
   controllers.RelationList:
@@ -50,10 +39,37 @@ definitions:
         type: string
       user_list:
         items:
-          $ref: '#/definitions/controllers.User'
+          $ref: '#/definitions/vo.User'
         type: array
     type: object
-  controllers.User:
+  controllers.UserInfoResponse:
+    properties:
+      status_code:
+        type: integer
+      status_msg:
+        type: string
+      user:
+        $ref: '#/definitions/vo.User'
+    type: object
+  utils.Response:
+    properties:
+      status_code:
+        type: integer
+      status_msg:
+        type: string
+    type: object
+  vo.Comment:
+    properties:
+      content:
+        type: string
+      create_date:
+        type: string
+      id:
+        type: integer
+      user:
+        $ref: '#/definitions/vo.User'
+    type: object
+  vo.User:
     properties:
       follow_count:
         type: integer
@@ -66,19 +82,10 @@ definitions:
       name:
         type: string
     type: object
-  controllers.UserInfoResponse:
-    properties:
-      status_code:
-        type: integer
-      status_msg:
-        type: string
-      user:
-        $ref: '#/definitions/controllers.User'
-    type: object
-  controllers.Video:
+  vo.Video:
     properties:
       author:
-        $ref: '#/definitions/controllers.User'
+        $ref: '#/definitions/vo.User'
       comment_count:
         type: integer
       cover_url:
@@ -92,13 +99,6 @@ definitions:
       play_url:
         type: string
       title:
-        type: string
-    type: object
-  utils.Response:
-    properties:
-      status_code:
-        type: integer
-      status_msg:
         type: string
     type: object
 host: 127.0.0.1:8080
@@ -115,7 +115,7 @@ info:
   title: douyin
   version: "1.0"
 paths:
-  /douyin/comment/action:
+  /douyin/comment/action/:
     post:
       consumes:
       - application/x-json-stream
@@ -155,7 +155,7 @@ paths:
       summary: 评论操作，删除或增加
       tags:
       - 评论
-  /douyin/comment/list:
+  /douyin/comment/list/:
     get:
       parameters:
       - description: 视频id
@@ -180,7 +180,7 @@ paths:
       summary: 获取所有评论
       tags:
       - 评论
-  /douyin/favorite/action:
+  /douyin/favorite/action/:
     post:
       consumes:
       - application/x-json-stream
@@ -212,7 +212,7 @@ paths:
       summary: 点赞操作，点赞或取消点赞
       tags:
       - 点赞
-  /douyin/favorite/list:
+  /douyin/favorite/list/:
     get:
       consumes:
       - application/x-json-stream
@@ -239,7 +239,7 @@ paths:
       summary: 获取所有点赞过的视频
       tags:
       - 点赞
-  /douyin/feed:
+  /douyin/feed/:
     get:
       consumes:
       - application/x-json-stream
@@ -264,7 +264,7 @@ paths:
       summary: 视频推流
       tags:
       - feed
-  /douyin/message/action:
+  /douyin/message/action/:
     post:
       consumes:
       - application/x-json-stream
@@ -301,14 +301,14 @@ paths:
       summary: 发送消息
       tags:
       - 消息
-  /douyin/message/chat:
+  /douyin/message/chat/:
     get:
       consumes:
       - application/x-json-stream
       parameters:
       - description: 用户id
         in: query
-        name: user_id
+        name: to_user_id
         required: true
         type: integer
       - description: token
@@ -328,7 +328,7 @@ paths:
       summary: 获取聊天记录
       tags:
       - 消息
-  /douyin/publish/action:
+  /douyin/publish/action/:
     post:
       consumes:
       - application/x-json-stream
@@ -360,7 +360,7 @@ paths:
       summary: 发布视频
       tags:
       - 发布
-  /douyin/publish/list:
+  /douyin/publish/list/:
     get:
       consumes:
       - application/x-json-stream
@@ -387,7 +387,7 @@ paths:
       summary: 获取发布视频列表
       tags:
       - 发布
-  /douyin/relation/action:
+  /douyin/relation/action/:
     post:
       consumes:
       - application/x-json-stream
@@ -419,7 +419,7 @@ paths:
       summary: 关注和取消关注操作
       tags:
       - 关系
-  /douyin/relation/follow/list:
+  /douyin/relation/follow/list/:
     get:
       consumes:
       - application/x-json-stream
@@ -446,7 +446,7 @@ paths:
       summary: 获取关注列表
       tags:
       - 关系
-  /douyin/relation/follower/list:
+  /douyin/relation/follower/list/:
     get:
       consumes:
       - application/x-json-stream
@@ -473,7 +473,7 @@ paths:
       summary: 获取关注者列表
       tags:
       - 关系
-  /douyin/relation/friend/list:
+  /douyin/relation/friend/list/:
     get:
       consumes:
       - application/x-json-stream
@@ -500,7 +500,7 @@ paths:
       summary: 获取好友列表
       tags:
       - 关系
-  /douyin/user:
+  /douyin/user/:
     get:
       consumes:
       - application/x-json-stream
@@ -527,7 +527,7 @@ paths:
       summary: 用户信息
       tags:
       - 用户
-  /douyin/user/login:
+  /douyin/user/login/:
     post:
       consumes:
       - application/x-json-stream
@@ -554,7 +554,7 @@ paths:
       summary: 用户登录
       tags:
       - 用户
-  /douyin/user/register:
+  /douyin/user/register/:
     post:
       consumes:
       - application/x-json-stream
